# Ai-engineering-introduction

./: .dockerignore  .env  .env.db  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hello_world.py  index.html  manage.py  nginx.conf  open_claw.py  requirements.txt  script.js  settings.py  styles.css
agentic_engineering_tips/: .env  .env.example  .pre-commit-config.yaml  Readme.md  agent.py  api.py  example_text.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
keithlowdev/: settings.py
langchain_fundamentals/: Dockerfile  agent.py  api.py  docker-compose.yml  requirements.txt
opencode_fundamentals/: readme.md
owners/: admin.py  forms.py  models.py  urls.py  views.py
properties/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
property_crm/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/owners/: dashboard.html  interaction_form.html  owner_confirm_delete.html  owner_detail.html  owner_form.html  owner_list.html
